[package]
name = "hyper-socks2"
version = "0.5.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A SOCKS5 connector for hyper library"
repository = "https://github.com/ark0f/hyper-socks2"
documentation = "https://docs.rs/hyper-socks2"
readme = "README.md"
keywords = ["hyper", "network", "ssl", "tls"]
categories = ["authentication", "network-programming", "web-programming::http-client"]
include = ["Cargo.toml", "LICENSE-*.md", "src/**/*"]
edition = "2018"

[badges]
github-actions = { repository = "https://github.com/ark0f/hyper-socks2", workflow = "CI" }

[dependencies]
hyper = "0.14"
async-socks5 = "0.5"
futures = "0.3"
tokio = "1.0"
thiserror = "1.0"
http = "0.2"

# `tls` feature
hyper-tls = { version = "0.5", optional = true }

# `rustls` feature
hyper-rustls = { version = "0.22", optional = true }
rusttls = { package = "rustls", version = "0.19", optional = true }
rustls-native-certs = { version = "0.5", optional = true }

[dev-dependencies]
hyper = { version = "0.14", features = ["http1"] }
tokio = { version = "1.0", features = ["macros"] }

[features]
default = ["tls"]
tls = ["hyper-tls"]
rustls = ["hyper-rustls", "rusttls", "rustls-native-certs"]
