[package]
name = "hyper-socks2"
version = "0.9.1"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A SOCKS5 connector for hyper library"
repository = "https://github.com/ark0f/hyper-socks2"
documentation = "https://docs.rs/hyper-socks2"
readme = "README.md"
keywords = ["hyper", "network", "ssl", "tls"]
categories = ["authentication", "network-programming", "web-programming::http-client"]
include = ["Cargo.toml", "LICENSE-*.md", "src/**/*"]
edition = "2021"

[badges]
github-actions = { repository = "https://github.com/ark0f/hyper-socks2", workflow = "CI" }

[dependencies]
hyper = "1"
async-socks5 = "0.6"
tokio = "1.0"
thiserror = "1.0"
http = "1"
tower-service = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }

# `tls` feature
hyper-tls = { version = "0.6", optional = true }

# `rustls` feature
rusttls = { package = "rustls", version = "0.23", default-features = false, optional = true }
hyper-rustls = { version = "0.27", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
hyper-util = { version = "0.1", features = ["http1", "client", "client-legacy"] }
http-body-util = "0.1"
bytes = "1"

[features]
default = ["tls"]
tls = ["dep:hyper-tls"]
# for compatibility
rustls = ["rustls-native-roots"]
_rustls = ["dep:rusttls", "dep:hyper-rustls", "hyper-rustls?/http1", "tls12", "logging", "aws-lc-rs"]
rustls-native-roots = ["_rustls", "hyper-rustls?/native-tokio"]
rustls-webpki-roots = ["_rustls", "hyper-rustls?/webpki-tokio"]
# only available for hyper-rustls
tls12 = ["rusttls?/tls12", "hyper-rustls?/tls12"]
logging = ["rusttls?/logging", "hyper-rustls?/logging"]
aws-lc-rs = ["rusttls?/aws-lc-rs", "hyper-rustls?/aws-lc-rs"]
fips = ["rusttls?/fips", "hyper-rustls?/fips"]
ring = ["rusttls?/ring", "hyper-rustls?/ring"]
